<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="presenter"
            type="com.milanix.shutter.login.LoginContract.Presenter" />

        <variable
            name="activity"
            type="com.milanix.shutter.login.LoginFragment" />

        <variable
            name="login"
            type="com.milanix.shutter.login.Login" />
    </data>

    <RelativeLayout
        android:id="@+id/vgLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/flBanner"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_title">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_cover" />

            <ImageView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_large"
                android:src="@drawable/ic_title" />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flBanner"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large">

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/tlPassword"
                android:nextFocusForward="@+id/tlPassword"
                android:text="@={login.username}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlEmail"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:onEditorAction="@{activity::onEditorAction}"
                android:text="@={login.password}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_shutter"
            android:enabled="@{!TextUtils.isEmpty(login.username) &amp;&amp; !TextUtils.isEmpty(login.password)}"
            android:onClick="@{()->presenter.login(login)}"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRequestPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignIn"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:onClick="@{()->activity.requestPassword()}"
            android:padding="@dimen/padding_normal"
            android:text="@string/action_signin_forget_password"
            android:textColor="@color/colorTextGrey500"
            android:textSize="@dimen/text_small" />

    </RelativeLayout>
</layout>