<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="presenter"
            type="com.milanix.shutter.login.SignUpContract.Presenter" />

        <variable
            name="fragment"
            type="com.milanix.shutter.login.SignUpFragment" />

        <variable
            name="view"
            type="com.milanix.shutter.login.SignUpContract.View" />

        <variable
            name="signup"
            type="com.milanix.shutter.login.SignUp" />
    </data>

    <RelativeLayout
        android:id="@+id/vgLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_cover"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:onClick="@{()->view.selectAvatar()}"
                app:civ_border_color="@color/colorTextGrey300"
                app:civ_border_width="2dp"
                app:imageUrl="@{signup.avatar}"
                app:placeHolder="@{@drawable/avatar_camera_placeholder}"
                app:transformation="@{`crop`}" />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCover"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large">

            <AutoCompleteTextView
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:nextFocusDown="@+id/etEmail"
                android:nextFocusForward="@+id/etEmail"
                android:text="@={signup.username}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tlName"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/etPassword"
                android:nextFocusForward="@+id/etPassword"
                android:text="@={signup.email}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlEmail"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:onEditorAction="@{fragment::onEditorAction}"
                android:text="@={signup.password}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_shutter"
            android:enabled="@{!TextUtils.isEmpty(signup.username) &amp;&amp; !TextUtils.isEmpty(signup.email) &amp;&amp; !TextUtils.isEmpty(signup.password) &amp;&amp; !TextUtils.isEmpty(signup.avatar.toString())}"
            android:onClick="@{()->presenter.signUp(signup)}"
            android:text="@string/action_sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:onClick="@{()->view.openAgreement()}"
            android:text="@string/action_signin_accept_terms"
            android:textColor="@color/colorTextGrey500"
            android:textSize="@dimen/text_small" />
    </RelativeLayout>
</layout>