<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.util.Patterns" />

        <variable
            name="requestpassword"
            type="com.milanix.shutter.auth.resetpassword.RequestPassword" />

        <variable
            name="fragment"
            type="com.milanix.shutter.auth.resetpassword.RequestPasswordFragment" />

        <variable
            name="presenter"
            type="com.milanix.shutter.auth.resetpassword.RequestPasswordContract.Presenter" />

    </data>

    <RelativeLayout
        android:id="@+id/vgLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvResetEmailHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/message_reset_password_send_email"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/text_small" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvResetEmailHint"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large">

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/tlPassword"
                android:nextFocusForward="@+id/tlPassword"
                android:onEditorAction="@{fragment::onEditorAction}"
                android:text="@={requestpassword.email}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tlEmail"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/btn_shutter"
            android:enabled="@{!TextUtils.isEmpty(requestpassword.email) &amp;&amp; Patterns.EMAIL_ADDRESS.matcher(requestpassword.email).matches()}"
            android:onClick="@{()->presenter.requestPassword(requestpassword)}"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:text="@string/action_request_password_request"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>